--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -31,6 +31,7 @@
     padding: 1rem;
     height: auto;
     width: calc(100% - 2rem);
+    background-color: #c6f5e524;
 }
 
 .c-section__loading {
