--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -91,7 +91,7 @@
 .p-media__thumb::before {
     content: "";
     display: block;
-    padding-top: 100%;
+    padding-top: 100%; /*56.25, 75*/
 }
 
 .p-media__thumb > img {
